@@ -23,6 +23,12 @@ module Baler
         new_hash.each{|key, value| new_hash[key] = other_hash[value]}
       end
     end
+    
+    module Array
+      def extract_options
+        last.is_a?(Hash) ? pop : {}
+      end
+    end
   end
 end
 
@@ -32,4 +38,8 @@ end
 
 class Hash
   include Baler::Support::Hash
+end
+
+class Array
+  include Baler::Support::Array
 end
